<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.Sign_in"
    android:orientation="vertical"
    android:gravity="center"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"
        style="@style/title"
        android:layout_marginBottom="250dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registration_username"
        style="@style/field"
        android:ems="10"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registration_password"
        style="@style/field"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/registration_sign_in"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_forgot_password"
        style="@style/forgot_password"
        android:layout_marginTop="35dp"
        />

</LinearLayout>