<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registration.Registration"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_title"
        style="@style/title"
        android:layout_marginBottom="250dp"
        />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registration_username"
        style="@style/field"
        android:ems="10"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/registration_password"
        style="@style/field"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="" />


    <include
        android:id="@+id/custom_button_sign_in"
        layout="@layout/custom_button_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_main_button"
        style="@style/button"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="20dp"
        />


    <Button
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create a new account"
        style="@style/button"
        android:background="@drawable/ic_main_button"
        android:padding="15dp"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_forgot_password"
        android:textColor="@color/button"
        style="@style/forgot_password"
        android:layout_marginTop="35dp"
        />
    


</LinearLayout>