<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.Create_Student"
    android:padding="25dp"
    android:orientation="vertical"
    android:gravity="center_vertical"
    >

    <TextView
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create a new student"
        android:layout_marginBottom="120dp"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        style="@style/viewpager_info_field"
        android:ems="15"
        android:hint="@string/student_name"
        />


    <EditText
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/viewpager_info_field"
        android:ems="15"
        android:inputType="number"
        android:hint="@string/student_phone"
        />


    <EditText
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/viewpager_info_field"
        android:inputType="text"
        android:ems="15"
        android:hint="Street, Apartment NO., etc..."
        />

    <EditText
        android:id="@+id/post"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/viewpager_info_field"
        android:ems="15"
        android:hint="Zip code and city"
        />


    <EditText
        android:id="@+id/cpr"
        android:inputType="text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/viewpager_info_field"
        android:ems="15"
        android:hint="CPR. NO. 1234567890"
        android:layout_marginBottom="100dp"
        />


    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_create_button"
        android:textAllCaps="false"
        android:background="@drawable/ic_main_button"
        style="@style/button"
        />


</LinearLayout>