<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top|left"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".viewpager.Practise">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_01"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/viewpager_theory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/practise_01"
                    />

                <EditText
                    android:id="@+id/practise_01_date"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:ems="6"
                    android:text="@string/theory_date"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_02"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/viewpager_theory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/practise_02"
                    />

                <EditText
                    android:id="@+id/practise_02_date"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:ems="6"
                    android:text="@string/theory_date"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_03"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/viewpager_theory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/practise_03"
                    />

                <EditText
                    android:id="@+id/practise_03_date"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:ems="6"
                    android:text="@string/theory_date"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_04"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/viewpager_theory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/practise_04"
                    />

                <EditText
                    android:id="@+id/practise_04_date"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:ems="6"
                    android:text="@string/theory_date"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_05"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/viewpager_theory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/practise_05"
                    />

                <EditText
                    android:id="@+id/practise_05_date"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:ems="6"
                    android:text="@string/theory_date"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_06"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/viewpager_theory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/practise_06"
                    />

                <EditText
                    android:id="@+id/practise_06_date"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:ems="6"
                    android:text="@string/theory_date"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_07"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/viewpager_theory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/practise_07"
                    />

                <EditText
                    android:id="@+id/practise_07_date"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:ems="6"
                    android:text="@string/theory_date"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_08"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/viewpager_theory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/practise_08"
                    />

                <EditText
                    android:id="@+id/practise_08_date"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:ems="6"
                    android:text="@string/theory_date"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_09"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/viewpager_theory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/practise_09"
                    />

                <EditText
                    android:id="@+id/practise_09_date"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="48dp"
                    android:ems="6"
                    android:text="@string/theory_date"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkBox_10"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    style="@style/viewpager_theory_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/practise_10"
                    />

                <EditText
                    android:id="@+id/practise_10_date"
                    style="@style/viewpager_practise_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:ems="6"
                    android:text="@string/theory_date"
                    android:visibility="invisible" />
            </LinearLayout>

            <Button
                android:id="@+id/create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save"
                android:textAllCaps="false"
                android:background="@drawable/ic_main_button"
                style="@style/button"
                android:layout_marginTop="20dp"
                />


        </LinearLayout>
    </ScrollView>
</LinearLayout>