<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:orientation="vertical"
    tools:context=".viewpager.Theory"
    android:gravity="center|top|left"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBox_01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/viewpager_theory_title"

                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_01"
                    style="@style/viewpager_theory_title"
                    />
                <EditText
                    android:id="@+id/lecture_01_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_date"
                    style="@style/viewpager_theory_title"
                    android:ems="6"
                    android:layout_marginLeft="15dp"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBox_02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/viewpager_theory_title"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_02"
                    style="@style/viewpager_theory_title"
                    />
                <EditText
                    android:id="@+id/lecture_02_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_date"
                    style="@style/viewpager_theory_title"
                    android:ems="6"
                    android:layout_marginLeft="15dp"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBox_03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/viewpager_theory_title"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_03"
                    style="@style/viewpager_theory_title"
                    />
                <EditText
                    android:id="@+id/lecture_03_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_date"
                    style="@style/viewpager_theory_title"
                    android:ems="6"
                    android:layout_marginLeft="15dp"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBox_04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/viewpager_theory_title"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_04"
                    style="@style/viewpager_theory_title"
                    />
                <EditText
                    android:id="@+id/lecture_04_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_date"
                    style="@style/viewpager_theory_title"
                    android:ems="6"
                    android:layout_marginLeft="15dp"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBox_05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/viewpager_theory_title"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_05"
                    style="@style/viewpager_theory_title"
                    />
                <EditText
                    android:id="@+id/lecture_05_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_date"
                    style="@style/viewpager_theory_title"
                    android:ems="6"
                    android:layout_marginLeft="15dp"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBox_06"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/viewpager_theory_title"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_06"
                    style="@style/viewpager_theory_title"
                    />
                <EditText
                    android:id="@+id/lecture_06_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_date"
                    style="@style/viewpager_theory_title"
                    android:ems="6"
                    android:layout_marginLeft="15dp"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBox_07"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/viewpager_theory_title"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_07"
                    style="@style/viewpager_theory_title"
                    />
                <EditText
                    android:id="@+id/lecture_07_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_date"
                    style="@style/viewpager_theory_title"
                    android:ems="6"
                    android:layout_marginLeft="15dp"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <CheckBox
                    android:id="@+id/checkBox_08"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/viewpager_theory_title"
                    />
                <TextView
                    android:layout_marginLeft="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_08"
                    style="@style/viewpager_theory_title"
                    />
                <EditText
                    android:id="@+id/lecture_08_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theory_date"
                    style="@style/viewpager_theory_title"
                    android:ems="6"
                    android:layout_marginLeft="15dp"
                    android:visibility="invisible"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:text="Save"
                android:background="@drawable/ic_main_button"
                style="@style/button"
                android:layout_marginTop="70dp"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>